<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.order.OrderFragment">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/main_view_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="button, items, et_comment_layout, et_name_layout, et_number_layout, title_name, title_comment, title_phone_number, total_cost, total_cost_title"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/default_view_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="empty_cart_iv, empty_cart_tv"
        tools:visibility="gone" />


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_horizontal_margin"
        android:text="@string/submit_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/items"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/small_horizontal_margin"
        app:layout_constraintBottom_toTopOf="@+id/title_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/product_item_order" />

    <TextView
        android:id="@+id/title_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_vertical_margin"
        android:text="@string/title_name"
        app:layout_constraintBottom_toTopOf="@+id/et_name_layout"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/et_name_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_horizontal_margin"
        android:layout_marginEnd="@dimen/small_horizontal_margin"
        android:layout_marginBottom="@dimen/small_vertical_margin"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/title_phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/title_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_horizontal_margin"
        android:text="@string/title_phone_number"
        app:layout_constraintBottom_toTopOf="@+id/et_number_layout"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/et_number_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_horizontal_margin"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:hint="@string/hint_phone_number"
        android:inputType="phone"
        android:maxLength="13"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/title_comment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/title_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_horizontal_margin"
        android:text="@string/title_comment"
        app:layout_constraintBottom_toTopOf="@+id/et_comment_layout"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/et_comment_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_horizontal_margin"
        android:hint="@string/hint_comment"
        android:inputType="textMultiLine"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/divider3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/total_cost_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_horizontal_margin"
        android:text="@string/total_cost_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <TextView
        android:id="@+id/total_cost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_horizontal_margin"
        android:layout_marginStart="14dp"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintStart_toEndOf="@+id/total_cost_title"
        app:layout_constraintTop_toBottomOf="@+id/divider3"
        tools:text="12.0 руб." />

    <View
        android:id="@+id/divider7"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/items"
        tools:layout_editor_absoluteX="1dp" />

    <ImageView
        android:id="@+id/empty_cart_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/no_products"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/empty_cart_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/vertical_margin"
        android:fontFamily="@font/tangak"
        android:text="@string/empty_cart_text"
        android:textColor="@color/text_color_black"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="@+id/empty_cart_iv"
        app:layout_constraintStart_toStartOf="@+id/empty_cart_iv"
        app:layout_constraintTop_toBottomOf="@+id/empty_cart_iv" />

</androidx.constraintlayout.widget.ConstraintLayout>