<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/title_theme_chooser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin"
        android:text="@string/title_theme_switcher"
        android:textSize="@dimen/settings_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/theme_switcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/title_theme_chooser"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/light_theme"
        app:layout_constraintTop_toBottomOf="@+id/title_theme_chooser" />

    <TextView
        android:id="@+id/light_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/light_theme"
        app:layout_constraintBottom_toBottomOf="@+id/theme_switcher"
        app:layout_constraintEnd_toEndOf="@+id/title_theme_chooser"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/title_theme_chooser"
        app:layout_constraintTop_toTopOf="@+id/theme_switcher"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/dark_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dark_theme"
        app:layout_constraintBottom_toBottomOf="@+id/theme_switcher"
        app:layout_constraintStart_toEndOf="@+id/theme_switcher"
        app:layout_constraintTop_toTopOf="@+id/theme_switcher" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/theme_switcher" />

    <TextView
        android:id="@+id/title_language_chooser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin"
        android:text="@string/title_language_chooser"
        android:textSize="@dimen/settings_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/grayuiop"
        android:elevation="5dp"
        android:entries="@array/languages"
        app:layout_constraintEnd_toEndOf="@+id/title_language_chooser"
        app:layout_constraintStart_toStartOf="@+id/title_language_chooser"
        app:layout_constraintTop_toBottomOf="@+id/title_language_chooser" />

    <View
        android:id="@+id/divider2"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/small_vertical_margin"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>